@@ -2,6 +2,8 @@ trunk
 =====
 * removed 'excludeself' argument from mxPath() function
 * added deprecation warning for argument 'all'=TRUE in mxPath()
+* eliminated flattenModelHelper() and replaced with functions that use lapply()
+* changed signature of genericObjModelConvert() to return list(job, flatJob) in order to improve performance
 
 Beta Release 999.0.0-1690 (June 27, 2011)
 =========================================
